fixing overflow-x of the sidecart

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+/* body,html{
   overflow-x: hidden;
 }
 
 
+@media only screen and (max-width: 1100px) {
+  body,html {
+    background-color: rgb(92, 92, 197);
+    overflow-x: hidden !important;
+  }
+} */
+
+html {
+
+  overflow-x: hidden;
+}
+
+body {
+
+  position: relative;
+  overflow-x: hidden;
+}
